--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,103 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+body {
+  padding-bottom: 30px;
+}
+
+.section {
+  width: 1200px;
+  min-height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: fixed;
+  width: 1200px;
+  background-image: url('../images/example.jpg');
+  background-position-y: 39%;
+  background-size: cover;
+}
+.search-form > input {
+  border-radius: 6px;
+  border-color: rgb(68, 137, 216);
+}
+
+button {
+  margin-left: 20px;
+  padding: 10px 20px;
+  background-color: rgb(68, 137, 216);
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: transform 300ms linear;
+  // transform-origin: center right;
+
+  &[disabled='disabled'] {
+    cursor: auto;
+    background-color: rgba(128, 128, 128, 0.8);
+    transform: rotate(180deg);
+    // transform-origin: center right;
+  }
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding-top: 60px;
+}
+
+.photo-card {
+  width: calc((100% - 30px) / 4);
+  box-shadow: 0px 3px 3px rgba(10, 10, 10, 0.4),
+    3px 3px 0px rgba(10, 10, 10, 0.1), 5px 5px 5px rgba(10, 10, 10, 0.1);
+}
+
+.photo {
+  width: 100%;
+  height: 180px;
+}
+
+.info {
+  display: flex;
+  justify-content: space-around;
+  font-family: 'Roboto';
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home-btn {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 10;
+  transform: rotate(180deg);
+  cursor: pointer;
+  transition: transform 500ms linear;
+
+  &:hover {
+    transform: rotate(-180deg);
+  }
+}
+
+.loader {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hidden {
+  width: 0;
+  height: 0;
+  padding: 0;
+}
